@@ -1,0 +1,4 @@
+*   sampleMap.tmj, tilemap.png
+    *   Tiny Battle
+        *   <https://kenney-assets.itch.io/tiny-battle>
+        *   License: CC0 1.0 Universal <https://creativecommons.org/publicdomain/zero/1.0/>
