@@ -1,0 +1,170 @@
+{ "compressionlevel":-1,
+ "height":17,
+ "infinite":false,
+ "layers":[
+        {
+         "data":[2, 2, 2, 1, 58, 1, 2, 2, 1, 1, 1, 1, 3, 3, 1, 1, 1, 3, 2, 2, 58, 2, 2, 3, 1, 2, 1, 1, 1, 1,
+            3, 3, 3, 2, 58, 3, 1, 1, 1, 1, 2, 1, 2, 1, 2, 3, 1, 1, 1, 1, 58, 1, 2, 2, 1, 1, 1, 1, 2, 1,
+            1, 2, 4, 74, 23, 1, 1, 1, 2, 2, 2, 2, 1, 3, 1, 3, 1, 1, 1, 3, 58, 1, 1, 3, 2, 1, 2, 1, 1, 1,
+            2, 1, 58, 1, 1, 1, 1, 1, 3, 2, 2, 2, 2, 1, 1, 1, 1, 2, 1, 1, 58, 2, 1, 1, 1, 1, 1, 3, 2, 1,
+            2, 1, 58, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 3, 1, 1, 19, 20, 20, 76, 20, 21, 1, 1, 3, 1, 1, 3, 2,
+            1, 1, 58, 1, 1, 1, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 37, 38, 38, 38, 38, 92, 20, 21, 1, 1, 1, 1, 1,
+            1, 2, 22, 74, 74, 74, 5, 2, 3, 2, 1, 1, 1, 1, 1, 2, 1, 55, 56, 94, 38, 38, 38, 38, 39, 2, 1, 1, 1, 1,
+            1, 1, 1, 1, 1, 1, 58, 1, 2, 1, 2, 2, 1, 2, 1, 1, 2, 1, 1, 37, 38, 38, 38, 38, 39, 1, 1, 3, 2, 1,
+            2, 1, 1, 2, 1, 1, 58, 2, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 55, 56, 56, 56, 56, 57, 2, 1, 1, 1, 2,
+            3, 1, 1, 2, 1, 2, 58, 1, 2, 1, 1, 3, 2, 1, 1, 1, 1, 1, 1, 1, 1, 3, 1, 3, 1, 1, 1, 1, 1, 1,
+            20, 20, 20, 20, 20, 20, 76, 20, 21, 1, 3, 2, 2, 1, 1, 1, 1, 1, 2, 3, 1, 3, 1, 1, 1, 1, 1, 1, 2, 1,
+            38, 38, 38, 38, 38, 38, 38, 38, 39, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 2,
+            38, 38, 38, 38, 38, 38, 38, 38, 92, 20, 20, 20, 20, 20, 21, 1, 1, 1, 1, 1, 1, 1, 3, 1, 1, 1, 2, 3, 1, 3,
+            38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 39, 2, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2,
+            56, 56, 56, 56, 56, 94, 38, 38, 38, 38, 38, 38, 38, 38, 92, 20, 20, 21, 1, 1, 3, 2, 2, 1, 1, 2, 1, 3, 1, 2,
+            1, 2, 2, 1, 1, 37, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 39, 1, 3, 2, 2, 1, 1, 3, 3, 1, 1, 2, 1,
+            2, 1, 2, 1, 2, 37, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 38, 39, 3, 1, 2, 1, 1, 1, 1, 1, 1, 2, 2, 1],
+         "height":17,
+         "id":1,
+         "name":"Terrain",
+         "opacity":1,
+         "type":"tilelayer",
+         "visible":true,
+         "width":30,
+         "x":0,
+         "y":0
+        }, 
+        {
+         "data":[0, 0, 6, 0, 0, 0, 145, 0, 0, 0, 145, 95, 95, 113, 113, 95, 113, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 145, 95, 0, 0, 145, 0, 95, 113, 95, 113, 113, 0, 95, 0, 0, 0, 0, 0, 0, 0, 6, 0, 95, 0,
+            0, 0, 0, 0, 0, 0, 145, 0, 0, 113, 145, 113, 113, 113, 113, 95, 0, 0, 0, 0, 0, 0, 0, 95, 6, 0, 0, 6, 0, 95,
+            0, 0, 0, 0, 0, 0, 146, 111, 111, 111, 148, 0, 113, 95, 0, 50, 0, 0, 0, 6, 0, 0, 0, 0, 95, 95, 0, 95, 0, 0,
+            111, 111, 131, 111, 111, 111, 166, 0, 0, 0, 145, 0, 0, 0, 0, 0, 6, 0, 0, 0, 0, 0, 0, 0, 0, 113, 113, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 145, 0, 48, 0, 12, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 95, 113, 95, 0, 0,
+            95, 0, 0, 0, 0, 0, 0, 0, 110, 111, 165, 111, 129, 111, 112, 0, 113, 113, 0, 0, 0, 0, 0, 0, 0, 0, 113, 113, 95, 113,
+            113, 95, 95, 0, 95, 0, 0, 0, 0, 0, 0, 0, 145, 0, 0, 0, 0, 95, 95, 0, 0, 0, 0, 0, 0, 113, 95, 113, 95, 113,
+            0, 113, 113, 113, 113, 0, 0, 0, 0, 0, 0, 0, 145, 0, 0, 113, 113, 113, 82, 0, 0, 0, 0, 0, 0, 95, 95, 113, 113, 0,
+            0, 95, 113, 0, 0, 0, 0, 13, 0, 0, 128, 111, 148, 0, 0, 0, 95, 0, 0, 0, 0, 0, 0, 0, 95, 113, 113, 95, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 6, 145, 0, 164, 111, 111, 129, 111, 111, 111, 130, 0, 113, 95, 113, 113, 113, 95, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 145, 0, 0, 0, 0, 145, 0, 0, 0, 145, 0, 113, 95, 89, 0, 113, 113, 0, 95, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 167, 0, 0, 0, 0, 145, 0, 81, 0, 164, 111, 111, 129, 111, 112, 95, 0, 113, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 164, 131, 131, 131, 131, 166, 6, 0, 81, 0, 0, 113, 145, 89, 0, 0, 0, 113, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 149, 149, 149, 149, 0, 0, 0, 0, 0, 0, 0, 145, 113, 0, 6, 0, 0, 0, 95,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 145, 0, 6, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 145, 0, 0, 0, 0, 113, 0, 0],
+         "height":17,
+         "id":2,
+         "name":"Objects",
+         "opacity":1,
+         "type":"tilelayer",
+         "visible":true,
+         "width":30,
+         "x":0,
+         "y":0
+        }, 
+        {
+         "data":[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 137, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 134, 0, 0, 133, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 135, 0, 0, 0, 0, 143, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2147483823, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 137, 0, 0, 135, 0, 136, 0, 0, 0, 0, 0, 0, 2147483827, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2147483825, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 144, 0, 24, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2147483824, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 143, 0, 24, 0, 0, 0, 2147483827, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2147483820, 0, 2147483822, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2147483827, 0, 2147483819, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 140, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 141, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2147483818, 0, 0, 2147483816, 0, 0, 0,
+            0, 0, 0, 0, 0, 141, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2147483819, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 2147483826, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2147483827, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+         "height":17,
+         "id":3,
+         "name":"Vehicles",
+         "opacity":1,
+         "type":"tilelayer",
+         "visible":true,
+         "width":30,
+         "x":0,
+         "y":0
+        }, 
+        {
+         "data":[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 183, 0, 0, 0, 0, 0, 0, 0, 0, 183, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 80, 80, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 80, 42, 43, 61, 0, 0, 0, 188, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 80, 80, 80, 62, 80, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 80, 80, 80, 80, 80, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 188, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+         "height":17,
+         "id":4,
+         "name":"UI",
+         "opacity":1,
+         "type":"tilelayer",
+         "visible":true,
+         "width":30,
+         "x":0,
+         "y":0
+        }, 
+        {
+         "data":[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 198, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 198, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 198, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 198, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+            0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+         "height":17,
+         "id":5,
+         "name":"Shadows",
+         "opacity":1,
+         "type":"tilelayer",
+         "visible":true,
+         "width":30,
+         "x":0,
+         "y":0
+        }],
+ "nextlayerid":6,
+ "nextobjectid":1,
+ "orientation":"orthogonal",
+ "renderorder":"right-down",
+ "tiledversion":"1.10.2",
+ "tileheight":16,
+ "tilesets":[
+        {
+         "columns":18,
+         "firstgid":1,
+         "image":"tilemap.png",
+         "imageheight":186,
+         "imagewidth":305,
+         "margin":0,
+         "name":"Tilemap",
+         "spacing":1,
+         "tilecount":198,
+         "tileheight":16,
+         "tilewidth":16,
+         "transparentcolor":"#feae34"
+        }],
+ "tilewidth":16,
+ "type":"map",
+ "version":"1.10",
+ "width":30
+}
